# mksci-font

./: .pre-commit-config.yaml  CHANGELOG.md  README.md  makefile  pyproject.toml  release-please-config.json  requirements.txt
.github/workflows/: ci.yml  release-please.yml
mksci_font/: __init__.py  config.py  decorators.py  display.py  font_loader.py  font_wrapper.py  text_ops.py
mksci_font/data/: merge_fonts.ff
tests/: conftest.py  test_config.py  test_decorators_display.py  test_font_loader.py  test_plot_jupyter.ipynb  test_public_api.py  test_smoke.py  test_text_ops.py
