[tool.poetry]
name = "mksci-font"
version = "0.1.0"
description = ""
authors = ["Shuang Song <songshgeo@gmail.com>"]
readme = "README.md"
packages = [{include = "mksci_font"}]

[tool.poetry.dependencies]
python = "^3.11"
matplotlib = "^3.7.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
allure-pytest = "^2.12.0"
ipykernel = "^6.21.2"
flake8 = "^6.0.0"
isort = "^5.12.0"
nbstripout = "^0.6.1"
pydocstyle = "^6.3.0"
pre-commit-hooks = "^4.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
