[tool.poetry]
name = "mksci-font"
version = "0.1.4"
description = "方便地将 Matplotlib 支持中文字体允许您配置图形为“中文宋体、英文 Times New Roman”"
authors = ["Shuang Song <songshgeo@gmail.com>"]
readme = "README.md"
packages = [{include = "mksci_font"}]
include = ["SunTimes.ttf"]

[tool.poetry.dependencies]
python = ">=3.8.1"
matplotlib = "*"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
allure-pytest = "^2.12.0"
ipykernel = "^6.21.2"
flake8 = "^6.0.0"
isort = "^5.12.0"
nbstripout = "^0.6.1"
pydocstyle = "^6.3.0"
pre-commit-hooks = "^4.4.0"
ruff = "^0.8.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
