[project]
name = "mksci-font"
version = "1.0.0"
description = "方便地将 Matplotlib 支持中文字体允许您配置图形为“中文宋体、英文 Times New Roman”"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Shuang Song", email = "songshgeo@gmail.com" }]
dependencies = [
    "matplotlib>=3.7",
    "pillow>=12.2.0,<13",
]

[project.optional-dependencies]
docs = []
dev = [
    "pytest>=7.2.1",
    "allure-pytest>=2.12.0",
    "ipykernel>=6.21.2",
    "flake8>=6.0.0",
    "isort>=5.12.0",
    "nbstripout>=0.6.1",
    "pydocstyle>=6.3.0",
    "pre-commit-hooks>=4.4.0",
    "ruff>=0.8.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mksci_font"]

[tool.hatch.build]
include = [
    "mksci_font/**",
]
